Added map links and added padding
All cards now have a link to relevent google map location and also there
is now padding for each card.

--- a/style.css
+++ b/style.css
@@ -33,8 +33,26 @@ a:hover {
 .card {
   width: 100%;
   object-fit: cover;
+  padding: 1rem;
+  border-radius: 5px;
+}
+
+.card > .row > .col-md-4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.card-body {
+  margin-left: 1rem;
 }
 
 .map-link {
   color: red;
+}
+
+@media only screen and (max-width: 768px) {
+  .card-body {
+    margin-left: 0;
+  }
 }
